--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,14 +1,14 @@
-FROM openjdk:8-jre-slim
+FROM openjdk:8-jre-alpine
 
 ENV APP_HOME=/opt/waves
 WORKDIR $APP_HOME
 
 ADD waves.conf .
-RUN apt-get update && apt-get install -y curl jq wget \
+RUN apk update && apk add curl jq wget \
     && JAR_REMOTE_PATH=$(curl "https://api.github.com/repos/wavesplatform/Waves/releases" \
         | jq -r '[.[] | select(.prerelease == true)] | first.assets[] | select(.name|endswith(".jar")) | .browser_download_url') \
-    && echo $JAR_REMOTE_PATH \
-    && wget $JAR_REMOTE_PATH -O $APP_HOME/waves.jar -q --show-progress
+    && echo "Downloading '$JAR_REMOTE_PATH'. It may take a few minutes..."\
+    && wget $JAR_REMOTE_PATH -O $APP_HOME/waves.jar -q
 EXPOSE 6860 6869
 ENTRYPOINT ["java", "-jar", "waves.jar", "waves.conf"]
 
