--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.wavesplatform</groupId>
             <artifactId>wavesj</artifactId>
             <version>0.16-SNAPSHOT</version>
