wip: stateChanges deserialization

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,16 @@
             <version>8.15.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>converter-jackson</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
 </project>
