--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,18 @@
             <artifactId>converter-jackson</artifactId>
             <version>2.5.0</version>
         </dependency>
+
+        <!-- crypto -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>1.59</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.59</version>
+        </dependency>
     </dependencies>
 
 </project>
