--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <!-- TODO нужен ли для JUnit5? -->
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest</artifactId>
-            <version>2.1</version>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.12.2</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>com.wavesplatform</groupId>
             <artifactId>wavesj</artifactId>
@@ -62,6 +62,8 @@
             <version>8.15.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- network -->
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>retrofit</artifactId>
